fix category button not fit text

--- a/packages/scandipwa/src/style/cms/block/homepage-category-preview.scss
+++ b/packages/scandipwa/src/style/cms/block/homepage-category-preview.scss
@@ -47,6 +47,7 @@
         --button-padding: 40px;
         --hollow-button-background: var(--color-white);
         --hollow-button-hover-background: var(--color-white);
+        --hollow-button-hover-height: none;
 
         position: absolute;
         inset-block-end: 24px;
@@ -73,5 +74,24 @@
 
     a {
         display: block;
+    }
+
+    &-Button {
+        height: max-content;
+        display: inline-block;
+        min-height: 48px;
+        flex-wrap: wrap;
+
+        @include desktop {
+            max-width: 28vw;
+        }
+
+        @include mobile {
+            max-width: 80vw;
+        }
+
+        * {
+            overflow-wrap: break-word;
+        }
     }
 }
